apps/oauth2-proxy/k8s/secure-headers.middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: secure-headers
  namespace: oauth2-proxy
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: false
    frameDeny: true
    contentTypeNosniff: true
