apps/oauth2-proxy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  type: ClusterIP
  selector:
    app: oauth2-proxy
  ports:
    - name: http
      protocol: TCP
      port: 4180
      targetPort: http
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: metrics
