apps/oauth2-proxy/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - oauth.biplane.casa
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 4180
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: secure-headers
